# AdventOfCode

./: .gitignore  Pipfile
2021/: 2021.py
2022/: day1.py  day10.py  day2.py  day3.py  day4.py  day7.py  day8.py
2022/day-05/: day5.py
2022/day-06/: day6.py
2022/day-09/: day9.py
2022/day-11/: day11.py
2022/day-12/: day12.py
2022/day-13/: day13.py
2022/day-14/: day14.py
2022/template/: template.py
2023/: CMakeLists.txt  readme.md
2023-arm/: readme.md
2023-arm/day-01/: asm.asm  cpp.cpp
2023-cpp/: CMakeLists.txt
2023-cpp/day-08/: main.cpp  sample2.txt
2023-python/day-01/: solution.py
2023-python/day-02/: solution.py
2023-python/day-03/: solution.py
2023-python/day-07/: solution.py
2023-python/day-08/: solution-og.py  solution.py
2023-python/day-09/: solution.py
2023-python/template/: solution.py
2023-rust/: Cargo.toml
2023-rust/benches/: benches.rs
2023-rust/src/: day8.rs  lib.rs
2023/day-01/: asm.asm  cpp.cpp
2023/day-template/: asm.asm  cpp.cpp  day-01.asm  day-01.cpp
2024-rust/: Cargo.toml
2024-rust/benches/: benches.rs
2024-rust/src/: day1.rs  day2.rs  day22.rs  day3.rs  day4.rs  day5.rs  lib.rs
2025-rust/: Cargo.toml
2025-rust/.cargo/: config.toml
2025-rust/benches/: day1_bench.rs
2025-rust/src/: day1.rs  lib.rs
